--- a/style.css
+++ b/style.css
@@ -88,9 +88,6 @@ text-align: center;
 .hero-middle {
 margin-top: auto;
 }
-.hero-bottom {
-
-}
 .navbar ul {
   display: flex;
   list-style-type: none;
@@ -108,4 +105,21 @@ border-bottom: 5px solid transparent;
 .navbar ul .nav-link:active,
 .navbar ul .nav-link:hover {
   border-color: white;
+}
+.img-right {
+  float: right;
+  margin-left: 10px;
+}
+.img-left {
+float: left;
+margin-right: 10px;
+}
+aside {
+  font-weight: bolder;
+}
+.text-right {
+text-align: right;
+}
+.text-left {
+text-align: left;
 }
